fixed button distortion after deployment

--- a/src/components/resign/resign.css
+++ b/src/components/resign/resign.css
@@ -20,7 +20,7 @@
   {
     width: 400px;
     border: 1px solid #d6d7da;
-    padding: 0px 15px 15px 15px;
+    padding: 0px 15px 15px 55px;
     border-radius: 10px;
     font-family: arial;
     line-height: 16px;
